# waveTest-App

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  HANDOVER.md  Home.py  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 1403231b5deb_add_audit_log_table.py  2670783b7954_add_incident_reports_table.py  3a6027e32dfc_add_oversight_plans_table.py  425a86c05930_add_id_sequences_table.py  72a2fe09e13f_add_model_cards_table.py  955fe0dd8cdf_add_project_inputs_table.py  aea6f9f57c46_add_risk_register_table.py  bbf12c64c999_add_explanation_requests_table.py  f0879a4682d7_add_cybersecurity_plans_table.py  f1125584fa19_add_sustainability_records_table.py  f9bff52d1773_baseline_schema.py
auth/: users.yaml.example
deploy/: Caddyfile  litestream.env.example  litestream.yml  rclone.conf.example
deploy/systemd/: litestream.service  wavetest-app.service  wavetest-auth-backup.service  wavetest-auth-backup.timer
docs/: AUDIT_MANUAL.md  INPUT_SPEC.md
pages/: 0_Combined_Report.py  10_Audit_Log.py  11_Risk_Management.py  12_Human_Oversight.py  13_Cybersecurity.py  14_Sustainability.py  15_Incidents.py  16_Right_To_Explanation.py  17_Model_Card.py  18_Captum.py  19_TextAttack.py  1_Data_Quality.py  20_Project_Inputs.py  2_Bias_Detection.py  3_Explainability.py  4_Logging_Framework.py  5_Performance_Monitoring.py  6_Clients.py  7_Systems.py  8_Projects.py  9_Project_Types.py
scripts/: auth_add_user.py  auth_set_role.py  build_manual_pdf.py  import_console_json.py  install_toolchain.sh  setup_server.sh
src/wavetest_app/: __init__.py  _time.py  audit.py  auth.py  classification.py  config.py  cybersecurity.py  explanations.py  incidents.py  inputs.py  model_card.py  oversight.py  risk.py  sustainability.py
src/wavetest_app/adapters/: __init__.py  _common.py  dataquality.py  explain.py  fairness.py  logging.py  monitoring.py
src/wavetest_app/branding/: __init__.py  body.py  cover.py  manual.py
src/wavetest_app/db/: __init__.py  ids.py  models.py  session.py
src/wavetest_app/ui/: __init__.py  helpers.py  uploads.py
tests/: conftest.py  test_admin.py  test_cybersecurity.py  test_explanations.py  test_incidents.py  test_inputs.py  test_manual_pdf.py  test_model_card.py  test_models.py  test_oversight.py  test_risk.py  test_sustainability.py
